proj1/testing/error/notAReflector.inp
* BETA GAMMA I II III (AAAA)
HELLO WORLD